[FIX] signing checksum address [ADD] pixel error detection

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <button class="btn" type="button" id="startDraw">3. Start Drawing!</button>
         <button class="btn" type="button" id="hideBtn">Hide</button>
     </div>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
+    <script type="text/javascript" src="ethjs-util.js"></script>
 </body>
 </html>
