--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </div>
     <div class="btns">
         <button class="btn" type="button" id="enableEthereumButton">1. Enable Ethereum</button>
-        <button class="btn" type="button" id="signTypedDataV4Button">2. Login (need POAP)</button>
+        <button class="btn" type="button" id="signTypedDataV4Button">2. "Sign" in (need POAP)</button>
         <button class="btn" type="button" id="startDraw">3. Start Drawing!</button>
         <button class="btn" type="button" id="hideBtn">Hide</button>
         <div id="progressbar">
@@ -36,6 +36,8 @@
             </table>
         </div>
     </div>
+    <script src="https://unpkg.com/@metamask/detect-provider/dist/detect-provider.min.js"></script>
+    <script type="text/javascript" src="ethjs-ens.js"></script>
     <script type="module" src="index.js"></script>
     <script type="text/javascript" src="ethjs-util.js"></script>
 </body>
