[ADD] import/export feature - Pixel wars!

--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
         <button class="btn" type="button" id="signTypedDataV4Button">2. "Sign" in (need POAP)</button>
         <button class="btn" type="button" id="startDraw">3. Start Drawing!</button>
         <button class="btn" type="button" id="hideBtn">Hide</button>
+        <button class="btn" type="button" id="exportBtn">Export (paste image from url)</button>
         <div id="progressbar">
             <span>100% drawn</span>
             <div></div>
         </div>
+    </div>
+    <div>
+        <input type="text" id="configImport" placeholder="Import image config...">
+        <button class="btn" type="button" id="importBtn">Import</button>
     </div>
     <div>
         <div id="FriendlyArtists">
