[ADD] auto-filtering white pixels, "rows" drawMode

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="metamaskConnect">
         <button class = "mmBtn" id="connectButton">Connect</button>
         <button class = "mmBtn" id="hideBtn"></button>
+        <button class = "mmBtn" id="drawModeBtn">random</button>
     </div>
     <div class="btns">
         <div class="afterImport">
@@ -53,7 +54,7 @@
     </div>
     <script src="https://unpkg.com/@metamask/detect-provider/dist/detect-provider.min.js"></script>
     <script type="text/javascript" src="ethjs-ens.js"></script>
-    <script type="module" src="index.js"></script>
+    <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="ethjs-util.js"></script>
 </body>
 </html>
