[ADD] basic option for background image drawing
closes #1

--- a/canvas.html
+++ b/canvas.html
@@ -12,6 +12,7 @@
         <button class = "mmBtn" id="connectButton">Connect</button>
         <button class = "mmBtn" id="hideBtn"></button>
         <button class = "mmBtn" id="drawModeBtn">random</button>
+        <button class = "mmBtn" id="backgroundBtn">Normal</button>
     </div>
     <div class="btns">
         <div class="afterImport">
