--- a/canvas.html
+++ b/canvas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="./styles.css">
 <head>
 </head>
